--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+#bluebox {
+  bottom: 41%;
+
+  min-width: 288px;
+
+  min-height: 40px;
+}
+
+@layer base {
+  @font-face {
+    font-family: roboto;
+    src: url(public/fonts/Roboto-Thin.ttf);
+  }
+}
